import enum


class Color(str, enum.Enum):
    BLACK = '\u25CF'
    RED = '\u25CB'
    EMPY = ' '
