import enum


class Endgame(int, enum.Enum):
    SIMPLE = 1
    GAMMON = 2
    BACKGAMMON = 3
